# LLM_Projects

./: .gitignore  AGENT_ANALYSIS_COMPLETE.json  AGENT_ANALYSIS_SUMMARY.md  AGENT_IMPLEMENTATION_CATALOG.md  ANALYSIS_SUMMARY.md  COMPLETE_SYSTEM_DOCUMENTATION.md  COMPREHENSIVE_CODE_REVIEW_REPORT.json  COMPREHENSIVE_EXPERIMENT_SUMMARY.md  EXPERIMENTS_ANALYSIS_REPORT.txt  EXPERIMENTS_SUMMARY.csv  EXPERIMENT_ANALYSIS_REPORT.txt  MULTI_AGENT_SUMMARY.md  README_ANALYSIS.md  all_experiments.json  analyze_experiments.py  analyze_experiments_enhanced.py  best_experiments_summary.json  complete_final_report.json  comprehensive_experiment_analyzer.py  enhanced_experiment_analyzer.py  experiment_statistics.json  file_manifest.json  generate_project_index.py  generate_summary_report.py  multi_agent_analysis.json  project_index.json  分析完成摘要.txt
2080_LLM/DataAug_Criteria_Evidence/: .dockerignore  .gitignore  .hpo_watchdog_state.json  AGENTS.md  AUGMENTATION_SYSTEM_OVERVIEW.md  CHANGELOG.md  CI_CD_GUIDE.md  CLAUDE.md  CODEBASE_QUICK_SUMMARY.txt  CODEBASE_STRUCTURE_ANALYSIS.md  Dockerfile  FINAL_RUN_CONFIGURATION.md  HPO_STATUS_UPDATE.md  INVENTORY_INDEX.md  INVENTORY_QUICK_REFERENCE.md  INVENTORY_SUMMARY.txt  MAXIMAL_HPO_FINAL_STATUS.md  MAXIMAL_HPO_RUNNING.md  MLFLOW_TEST_VERIFICATION.md  MONITORING_GUIDE.md  Makefile  POSTGRESQL_SETUP.md  PR_PLAN.md  QUALITY-GATES.md  README.md  SBOM.txt  SUPERMAX_READY_TO_RUN.md  THIRD_PARTY_LICENSES.md  TRANSFORMATION_STATUS.md  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml
2080_LLM/DataAug_Criteria_Evidence/.devcontainer/: docker-compose.yml
2080_LLM/DataAug_Criteria_Evidence/docs/: AUGMENTATION_AUDIT.md  HPO_GUIDE.md  MODULE_MAP.md  QUICK_START.md  TESTING.md  TEST_REPORT_AUGMENTATION.md
2080_LLM/DataAug_Criteria_Evidence/scripts/: _gpu_monitor.py  _hpo_watchdog.py  build_docker.sh  generate_sbom.py  gpu_utilization.py  launch_test_evaluation.py  monitor_hpo.sh  predict_evidence_test.py  prepare_tfidf_cache.py  profile_augmentation.py  quick_setup_postgres.sh  retrain_best_evidence.py  run_all_hpo.py  run_distributed_hpo.py  run_hpo_stage.py  run_maximal_hpo_all.sh  run_stage_c.py  setup_postgresql.sh  test_cicd.py  test_data_quality.py  test_ensemble.py  test_feature_store.py  test_integration.py  test_meta_learning.py  train_best.py  train_criteria.py  warm_start_hpo.py
2080_LLM/DataAug_Criteria_Evidence/tests/: test_augmentation_registry.py  test_augmentation_utils.py  test_hpo_augmentation.py  test_hpo_config.py  test_hpo_integration.py  test_hpo_max_smoke.py  test_hpo_stage_smoke.py  test_hpo_stages_abc.py  test_input_format_order.py  test_mlflow_artifacts.py  test_optimizers.py  test_pipeline_comprehensive.py  test_pipeline_extended.py  test_pipeline_scope.py  test_seed_determinism.py
2080_LLM/Psy_Agent_spanBERT_Evidence_Binding/criteria_binder/: .gitignore  README.md  REDSM5_SETUP.md  config_optimized.yaml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  test_config.yaml  test_optimizations.py
2080_LLM/Refactored_Psy/NoAug_Criteria_Evidence/: .gitignore  .pre-commit-config.yaml  CI_CD_SETUP.md  CLI_AND_MAKEFILE_GUIDE.md  Dockerfile  FILE_MANIFEST.txt  Makefile  QUICK_START.md  README.md  SETUP_COMPLETE.md  SETUP_SUMMARY.md  TRAINING_INFRASTRUCTURE.md  docker-compose.yml  pyproject.toml
3090_LLM/Psy_RAG/: .gitignore  Makefile  analyze_posts_pipeline.py  analyze_similarity_scores.py  pyproject.toml  run_analysis_simple.py  simulate_similarity_analysis.py
3090_LLM/Psy_RAG/Data/: translated_post_positive.csv  translated_post_positive_random_with_translation.csv
3090_LLM/Psy_RAG/docs/: COMPARISON_FEATURE.md  RAG_EVALUATION_README.md
3090_LLM/Psy_RAG/scripts/: comparison_main.py  evaluation_main.py
3090_LLM/Psy_RAG/tests/: conftest.py  test_comparison.py  test_stats_only.py
4090_LLM/DataAug_DeBERTa_Evidence/: .gitignore  Makefile  hpo_monitor_log.txt  monitor_hpo_final.sh  pyproject.toml
4090_LLM/DataAug_DeBERTa_Evidence/.claude/: settings.local.json
4090_LLM/DataAug_DeBERTa_Evidence/configs/: augmentation.yaml  data.yaml  mlflow.yaml  train.yaml
4090_LLM/DataAug_DeBERTa_Evidence/scripts/: init_optuna_db.py
4090_LLM/DataAug_DeBERTa_Evidence/tests/: conftest.py  test_early_stop.py  test_heads.py  test_hpo_space.py  test_hpo_stage_configs.py  test_mlflow_buffer.py  test_mlflow_local.py
4090_LLM/DataAug_Multi_Evidence/: AGENTS.md  AUGMENTATION_GUIDE.md  Makefile  README.md  evaluate_val_set.py  pyproject.toml
4090_LLM/DataAug_Multi_Evidence/.claude/: settings.local.json
4090_LLM/DataAug_Multi_Evidence/.devcontainer/: Dockerfile
4090_LLM/DataAug_Multi_Evidence/configs/: hpo_smoke_local.yaml  hpo_study.yaml  single_trial.yaml
4090_LLM/DataAug_Multi_Evidence/experiments/: hpo_study.db
4090_LLM/DataAug_Multi_Evidence/specs/: REVIEW_SUMMARY.md
4090_LLM/DataAug_Multi_Evidence/tests/: __init__.py
4090_LLM/LLM_Agents_ReDSM5/: .gitignore  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  pyproject.toml  requirements.txt
4090_LLM/LLM_Agents_ReDSM5/configs/: base.yaml  search_space.yaml
4090_LLM/LLM_Agents_ReDSM5/notebooks/: ReDSM5_Training_Colab.ipynb  data_loader_redsm5.py
4090_LLM/LLM_Agents_ReDSM5/scripts/: build_verification_report.py  check_env.py  run_eval.sh  run_hpo.sh  run_train.sh
4090_LLM/LLM_Agents_ReDSM5/src/: __init__.py  data.py  eval.py  evidence.py  hpo.py  losses.py  metrics.py  models.py  thresholds.py  train.py  utils.py
4090_LLM/LLM_Agents_ReDSM5/tests/: __init__.py  conftest.py  test_cli.py  test_data_llm.py  test_edge_cases.py  (+8 more)
4090_LLM/NoAug_Criteria_Evidence/: .dockerignore  .last_complete_time  .mlflow_enhancements.patch  CUDA_FIX_SUMMARY.md  FILE_MANIFEST.txt  GPU_OPTIMIZATION_IMPLEMENTATION.md  MLFLOW_QUICK_REFERENCE.md  MLFLOW_UI_STRUCTURE.txt  MONITORING_REPORT.md  README.md  RESULTS_LOCATION_GUIDE.md  check_hpo_status.sh  hpo_supermax.pid  hpo_supermax_run_crash3.log.bak  hpo_supermax_run_deadlock.log.bak  hpo_supervisor.pid  hpo_watchdog.sh  mlflow_enhancement_train_loop.patch  monitor_hpo_progress.sh  pyproject.toml  smart_monitor.pid
(+3849 files in other folders)
