[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dataaug-multi-both"
version = "0.1.0"
description = "Deep learning training project with data augmentation and hyperparameter optimization"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "dataaug_multi_both", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
# Core ML/DL framework (choose one and uncomment)
# torch = "^2.0.0"
# tensorflow = "^2.13.0"

# Required by Constitution Principle VII, VIII, IX
hydra-core = "^1.3.0"
mlflow = "^2.8.0"
optuna = ">=2.10.0,<3.0.0"
hydra-optuna-sweeper = "^1.2.0"

# Common ML dependencies
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
torch = "^2.2.0"
pyyaml = "^6.0.1"
transformers = "^4.33.0"
sqlalchemy = "<2.0.0"
rich = "^13.7.0"
nlpaug = "^1.1.11"
textattack = "^0.3.8"
tensorflow-hub = "^0.16.1"
sacremoses = "^0.0.53"
gensim = "^4.3.2"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.6.0"
ipython = "^8.16.0"
jupyter = "^1.0.0"

[tool.poetry.group.experiment.dependencies]
# Experiment-specific dependencies (visualization, analysis)
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.17.0"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | outputs
  | mlruns
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
