# File: setup.cfg
[metadata]
name = criteria-binder
version = 0.1.0
description = SpanBERT-based evidence binding model for criteria matching
long_description = file: README.md
long_description_content_type = text/markdown
author = ML Engineer
python_requires = >=3.10

[options]
packages = find:
package_dir =
    = src
install_requires =
    torch>=2.0.0
    transformers>=4.30.0
    datasets>=2.14.0
    numpy>=1.24.0
    PyYAML>=6.0
    tqdm>=4.65.0
    scikit-learn>=1.3.0
    accelerate>=0.20.0
    tokenizers>=0.13.0

[options.packages.find]
where = src